css/style.css
body {
	font: 13px/20px 'lucida grande', 'lucida sans unicode', 'lucida sans', helvetica, arial, sans-serif;
	color: #636261;
	background: #f3f2f1;
	margin: 0;
}
h1, h2, h3, p {
  margin: 0;
}
h1 {
  font-size: 24px;
  line-height: 40px;
  font-weight: 500;
  letter-spacing: -0.05em;
  padding-bottom: 20px;
  color: #222;
}
h3 {
  color: #222;
  font-size: 16px;
  font-weight: 500;
  padding-bottom: 10px;
}
p {
  padding-bottom: 10px;
}
a {
  color: #f58220;
}
a:hover {
  text-decoration: none;
}

/* container and grid */
div#container, div.container { position: relative; width: 880px; margin: 0 auto; padding: 0; }

.row { margin: 0 0 18px -20px; }
.column, .columns { float: left; display: inline; margin: 0 0 0 20px; }

.one { width: 55px; }
.four-thirds { width: 80px; }
.two { width: 130px; }
.three { width: 205px; }
.four { width: 280px; }
.five { width: 355px; }
.six { width: 430px; }
.seven { width: 505px; }
.eight { width: 580px; }
.nine { width: 655px; }
.ten { width: 730px; }
.eleven { width: 805px; }
.twelve { width: 880px; }

/* clear columns */
.row:after, .clearfix:after { content: "."; display: block; height: 0; clear: both; visibility: hidden; }
* html .column-row, * html .row, * html .clearfix { height: 1%; }
.row, .clearfix { display: inline-block; }
.row, .clearfix { display: block; }
 
/* IE6 */

body.ie .row { width: 900px; }
body.ie .eight .row	 { width: 600px; }
body.ie .nine .row	 { width: 675px; }
body.ie .ten .row	 { width: 750px; }
body.ie .eleven .row { width: 825px; }

/* header styles */
#header {
  margin-top: 84px;
}
#header .row {
  margin-bottom: 0;
}
img.header {
  widht: 236px;
}
ul#nav, #footer ul {
  list-style: none;
  margin: 0;
  padding: 0;
}
ul#nav li, #footer ul li {
  display: inline;
}
ul#nav li, ul#nav li a {
  text-decoration: none;
  color: #fff;
  font-size: 14px;
}
ul#nav li a {
  float: left;
	width: 80px;
	padding: 7px 10px;
	background: #d2d1d0;
	margin-left: 2px;
	-webkit-border-top-left-radius: 5px;
	-moz-border-top-left-radius: 5px;
	-o-border-top-left-radius: 5px;
	border-top-left-radius: 5px;
	-webkit-border-top-right-radius: 5px;
	-moz-border-top-right-radius: 5px;
	-o-border-top-right-radius: 5px;
	border-top-right-radius: 5px;
}
ul#nav li a.active, ul#nav li a.active:hover {
	background: #fff;
	color: #000;
}
ul#nav li a:hover {
	color: #fff;
	background: #f58220;
}
img.header {
  height: 38px;
  bottom: 0px;
	position: absolute;
}

/* content styles */
#content {
  background: #fff;
  padding-top: 25px;
  padding-bottom: 45px;
}
#content img {
  max-width: 100%;
  vertical-align: middle;
  border: 0;
}
#featured img {
  max-width: inherit;
}
a.learn-more { 
	color: #fff;
	font-size: 13px;
}
.tweet-handle {
  color: #222;
}
.tweet-handle:after {
  content: '@binnov: ';
}
.tweet-words {
  display: inline;
}
.tweet-time {
  font-style: italic;
  color: #aaa;
  border-top: 1px dotted #ddd;
  margin-top: 3px;
  padding-top: 1px;
}
.flickr img {
  margin-bottom: 20px;
}
.subsection {
  margin-bottom: 10px;
}
.behance img {
/*  width: 100%;*/
  margin-bottom: 10px;
}
.behance a {
  text-decoration: none;
  color: inherit;
}
.behance a:hover {
  text-decoration: underline;
}
.project-title {
  height: 50px;
}
.bitly .resource {
  height: 50px;
}

/* footer styles */
#footer {
  clear: both;
  font-size: 12px;
  padding-top: 18px;
}
#footer, #footer a {
  color: #999;
  text-decoration: none;
}
#footer a:hover, #footer a:active {
  color: #636261;
}
#footer ul li {
  vertical-align: top;
  padding-left: 6px;
  padding-right: 6px;
}
#footer ul li:first-child {
  padding-left: 0;
  padding-right: 2px;
}
#footer a img {
  height: 16px;
  opacity: 0.6;
}
#footer a img:hover {
  opacity: 1.0;
}
.float-left {
  float: left;
}
.float-right {
  float: right;
}

/* miscellaneous styles */
.margin-bottom0 {
  margin-bottom: 0;
}

